--- a/CSS/characters.css
+++ b/CSS/characters.css
@@ -29,17 +29,26 @@ body {
   }
   
   .navbar-brand {
-    padding-left: 0.3em;
+    padding-left: 0.2em;
     border-bottom: solid rgb(182, 182, 182) thin;
   }
   
   menu .nav-item {
-    padding: 0 0.3em;
+    padding: 0 0.5em;
   }
   
   footer a {
     float: right;
+    align-items: colomn;
   }
+
+  .picture-box2 {
+    float: right
+  }
+
+  /* main .accordianExample{
+    padding: .5em 4em;
+  } */
   
   @media (max-height: 600px) {
     header {
