--- a/CSS/characters.css
+++ b/CSS/characters.css
@@ -3,7 +3,7 @@ body {
     flex-direction: column;
     min-width: 375px;
   }
-  
+
   header {
     flex: 0 80px;
   }
@@ -14,6 +14,11 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
+  }
+
+  #accordionExample{
+    margin: 1rem;
+    align-self: center;
   }
   
   footer {
