--- a/CSS/about.css
+++ b/CSS/about.css
@@ -14,7 +14,9 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
+    color: black;
   }
+  
   
   footer {
     flex: 0 30px;
